--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,28 @@
         xmlns:local="clr-namespace:GA_2_WillCram"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Canvas>
+        <Label Content="Display Your Full Name - Message Box" Canvas.Left="50" Canvas.Top="39"/>
+        <Label Content="First Name" Canvas.Left="50" Canvas.Top="81"/>
+        <TextBox x:Name="txtFirstName" Canvas.Left="120" TextWrapping="Wrap" Canvas.Top="85" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="Last Name" Canvas.Left="287" Canvas.Top="81" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtLastName" Canvas.Left="357" TextWrapping="Wrap" Canvas.Top="85" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Button x:Name="btnFullName" Content="Display Full Name" Canvas.Left="507" Canvas.Top="84" HorizontalAlignment="Left" VerticalAlignment="Center" Width="230"/>
+        <Label Content="Perform a Calculation - Label" Canvas.Left="50" Canvas.Top="138" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="Number 1" Canvas.Left="50" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNumber1" Canvas.Left="120" TextWrapping="Wrap" Canvas.Top="173" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="Number 2" Canvas.Left="287" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNumber2" Canvas.Left="357" TextWrapping="Wrap" Canvas.Top="173" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Button x:Name="btnSubtract" Content="Subtract" Canvas.Left="320" Canvas.Top="205" Width="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Button x:Name="btnAdd" Content="Add" Canvas.Left="149" Canvas.Top="205" Width="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="Result" Canvas.Left="523" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label x:Name="txtDisplayResult" Content="Result" Canvas.Left="622" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="Display a Letter from a Word - Textbox" Canvas.Left="50" Canvas.Top="247" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="Enter a Word" Canvas.Left="50" Canvas.Top="278" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNumber1_Copy" Canvas.Left="157" TextWrapping="Wrap" Canvas.Top="282" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtNumber2_Copy" Canvas.Left="406" TextWrapping="Wrap" Canvas.Top="282" Width="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Button x:Name="btnAdd_Copy" Content="Display Letter" Canvas.Left="149" Canvas.Top="314" Width="329" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtDispayLetter" Canvas.Left="666" TextWrapping="Wrap" Canvas.Top="278" Width="52" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
-    </Grid>
+    </Canvas>
 </Window>
