--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -23,11 +23,12 @@
         <Label Content="Result" Canvas.Left="523" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label x:Name="txtDisplayResult" Content="Result" Canvas.Left="622" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Display a Letter from a Word - Textbox" Canvas.Left="50" Canvas.Top="247" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Enter a Word" Canvas.Left="50" Canvas.Top="278" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtNumber1_Copy" Canvas.Left="157" TextWrapping="Wrap" Canvas.Top="282" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtNumber2_Copy" Canvas.Left="406" TextWrapping="Wrap" Canvas.Top="282" Width="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button x:Name="btnAdd_Copy" Content="Display Letter" Canvas.Left="149" Canvas.Top="314" Width="329" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtDispayLetter" Canvas.Left="666" TextWrapping="Wrap" Canvas.Top="278" Width="52" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="Enter a Word" Canvas.Left="50" Canvas.Top="283" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtWord" Canvas.Left="157" TextWrapping="Wrap" Canvas.Top="287" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtSingleCharacter" Canvas.Left="417" TextWrapping="Wrap" Canvas.Top="287" Width="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Button x:Name="btnDisplayLetter" Content="Display Letter" Canvas.Left="124" Canvas.Top="319" Width="329" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="txtDispayLetter" Canvas.Left="603" TextWrapping="Wrap" Canvas.Top="287" Width="52" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Label Content="Choose a letter" Canvas.Left="317" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
     </Canvas>
 </Window>
