--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,23 +12,23 @@
         <TextBox x:Name="txtFirstName" Canvas.Left="120" TextWrapping="Wrap" Canvas.Top="85" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Content="Last Name" Canvas.Left="287" Canvas.Top="81" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <TextBox x:Name="txtLastName" Canvas.Left="357" TextWrapping="Wrap" Canvas.Top="85" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button x:Name="btnFullName" Content="Display Full Name" Canvas.Left="507" Canvas.Top="84" HorizontalAlignment="Left" VerticalAlignment="Center" Width="230"/>
-        <Label Content="Perform a Calculation - Label" Canvas.Left="50" Canvas.Top="138" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Number 1" Canvas.Left="50" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtNumber1" Canvas.Left="120" TextWrapping="Wrap" Canvas.Top="173" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Number 2" Canvas.Left="287" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtNumber2" Canvas.Left="357" TextWrapping="Wrap" Canvas.Top="173" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Button x:Name="btnSubtract" Content="Subtract" Canvas.Left="320" Canvas.Top="205" Width="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Button x:Name="btnAdd" Content="Add" Canvas.Left="149" Canvas.Top="205" Width="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Result" Canvas.Left="523" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label x:Name="txtDisplayResult" Content="Result" Canvas.Left="622" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Display a Letter from a Word - Textbox" Canvas.Left="50" Canvas.Top="247" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Label Content="Enter a Word" Canvas.Left="50" Canvas.Top="283" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtWord" Canvas.Left="157" TextWrapping="Wrap" Canvas.Top="287" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtSingleCharacter" Canvas.Left="417" TextWrapping="Wrap" Canvas.Top="287" Width="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button x:Name="btnDisplayLetter" Content="Display Letter" Canvas.Left="124" Canvas.Top="319" Width="329" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtDispayLetter" Canvas.Left="603" TextWrapping="Wrap" Canvas.Top="287" Width="52" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Label Content="Choose a letter" Canvas.Left="317" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Button x:Name="btnFullName" Content="Display Full Name" Canvas.Left="507" Canvas.Top="84" HorizontalAlignment="Left" VerticalAlignment="Center" Width="230" Click="btnFullName_Click"/>
+        <Label Content="Perform a Calculation - Label" Canvas.Left="50" Canvas.Top="145" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="Number 1" Canvas.Left="50" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNumber1" Canvas.Left="120" TextWrapping="Wrap" Canvas.Top="180" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="Number 2" Canvas.Left="287" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNumber2" Canvas.Left="357" TextWrapping="Wrap" Canvas.Top="180" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Button x:Name="btnSubtract" Content="Subtract" Canvas.Left="320" Canvas.Top="212" Width="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Button x:Name="btnAdd" Content="Add" Canvas.Left="149" Canvas.Top="212" Width="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="Result" Canvas.Left="523" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label x:Name="txtDisplayResult" Content="Result" Canvas.Left="622" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="Display a Letter from a Word - Textbox" Canvas.Left="52" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Label Content="Enter a Word" Canvas.Left="52" Canvas.Top="316" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtWord" Canvas.Left="159" TextWrapping="Wrap" Canvas.Top="320" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtSingleCharacter" Canvas.Left="419" TextWrapping="Wrap" Canvas.Top="320" Width="71" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Button x:Name="btnDisplayLetter" Content="Display Letter" Canvas.Left="126" Canvas.Top="352" Width="329" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtDispayLetter" Canvas.Left="605" TextWrapping="Wrap" Canvas.Top="320" Width="52" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Label Content="Choose a letter" Canvas.Left="319" Canvas.Top="316" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
     </Canvas>
 </Window>
