--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -18,17 +18,18 @@
         <TextBox x:Name="txtNumber1" Canvas.Left="120" TextWrapping="Wrap" Canvas.Top="180" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Number 2" Canvas.Left="287" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <TextBox x:Name="txtNumber2" Canvas.Left="357" TextWrapping="Wrap" Canvas.Top="180" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Button x:Name="btnSubtract" Content="Subtract" Canvas.Left="320" Canvas.Top="212" Width="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Button x:Name="btnAdd" Content="Add" Canvas.Left="149" Canvas.Top="212" Width="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Button x:Name="btnSubtract" Content="Subtract" Canvas.Left="320" Canvas.Top="212" Width="74" HorizontalAlignment="Center" VerticalAlignment="Top" Click="btnSubtract_Click"/>
+        <Button x:Name="btnAdd" Content="Add" Canvas.Left="149" Canvas.Top="212" Width="74" HorizontalAlignment="Center" VerticalAlignment="Top" Click="btnAdd_Click"/>
         <Label Content="Result" Canvas.Left="523" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label x:Name="txtDisplayResult" Content="Result" Canvas.Left="622" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Display a Letter from a Word - Textbox" Canvas.Left="52" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Label Content="Enter a Word" Canvas.Left="52" Canvas.Top="316" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <TextBox x:Name="txtWord" Canvas.Left="159" TextWrapping="Wrap" Canvas.Top="320" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <TextBox x:Name="txtSingleCharacter" Canvas.Left="419" TextWrapping="Wrap" Canvas.Top="320" Width="71" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Button x:Name="btnDisplayLetter" Content="Display Letter" Canvas.Left="126" Canvas.Top="352" Width="329" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Button x:Name="btnDisplayLetter" Content="Display Letter" Canvas.Left="126" Canvas.Top="352" Width="329" HorizontalAlignment="Left" VerticalAlignment="Top" Click="btnDisplayLetter_Click"/>
         <TextBox x:Name="txtDispayLetter" Canvas.Left="605" TextWrapping="Wrap" Canvas.Top="320" Width="52" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Label Content="Choose a letter" Canvas.Left="319" Canvas.Top="316" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Label Content="William Cram - Guided Assignment 2" Canvas.Left="544" Canvas.Top="21" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
     </Canvas>
 </Window>
