--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,12 +7,14 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Canvas>
+
         <Label Content="Display Your Full Name - Message Box" Canvas.Left="50" Canvas.Top="39"/>
         <Label Content="First Name" Canvas.Left="50" Canvas.Top="81"/>
         <TextBox x:Name="txtFirstName" Canvas.Left="120" TextWrapping="Wrap" Canvas.Top="85" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Content="Last Name" Canvas.Left="287" Canvas.Top="81" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <TextBox x:Name="txtLastName" Canvas.Left="357" TextWrapping="Wrap" Canvas.Top="85" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Button x:Name="btnFullName" Content="Display Full Name" Canvas.Left="507" Canvas.Top="84" HorizontalAlignment="Left" VerticalAlignment="Center" Width="230" Click="btnFullName_Click"/>
+        <Label Content="William Cram - Guided Assignment 2" Canvas.Left="544" Canvas.Top="21" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Content="Perform a Calculation - Label" Canvas.Left="50" Canvas.Top="145" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Number 1" Canvas.Left="50" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <TextBox x:Name="txtNumber1" Canvas.Left="120" TextWrapping="Wrap" Canvas.Top="180" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -23,12 +25,12 @@
         <Label x:Name="lblEquation" Content="Sign" Canvas.Left="622" Canvas.Top="176" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Content="Display a Letter from a Word - Textbox" Canvas.Left="52" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Label Content="Enter a Word" Canvas.Left="52" Canvas.Top="316" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtWord" Canvas.Left="159" TextWrapping="Wrap" Canvas.Top="320" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtSingleCharacter" Canvas.Left="419" TextWrapping="Wrap" Canvas.Top="320" Width="71" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtWord" Canvas.Left="159" TextWrapping="Wrap" Canvas.Top="320" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" TextChanged="txtWord_TextChanged"/>
+        <TextBox x:Name="txtCharIndex" Canvas.Left="419" TextWrapping="Wrap" Canvas.Top="320" Width="71" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Button x:Name="btnDisplayLetter" Content="Display Letter" Canvas.Left="126" Canvas.Top="352" Width="329" HorizontalAlignment="Left" VerticalAlignment="Top" Click="btnDisplayLetter_Click"/>
         <TextBox x:Name="txtDispayLetter" Canvas.Left="605" TextWrapping="Wrap" Canvas.Top="320" Width="52" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Label Content="Choose a letter" Canvas.Left="319" Canvas.Top="316" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Label Content="William Cram - Guided Assignment 2" Canvas.Left="544" Canvas.Top="21" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label x:Name="lblNumberOfLetters" Content="Enter a number" Canvas.Left="342" Canvas.Top="288" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+
 
     </Canvas>
 </Window>
